test/invalid/idl/async-iterable-readonly.webidl
[Exposed=Window]
interface AsyncIterable {
  readonly async iterable<long, short>;
};
